--- a/1/need2g0/90448-maddy-and-kirsten-part-one/f/rus.textile
+++ b/1/need2g0/90448-maddy-and-kirsten-part-one/f/rus.textile
@@ -6,11 +6,11 @@
 
 Кирстен всегда ревновала к своей сводной сестре Мэдди. Сегодня она собирается отомстить. Или Кирстен становится мастером мочевого пузыря своей «золотой» сестры.
 
-«Давай, Мэдди! Впусти меня!» — умоляла Кирстен из-за двери в*нной. Она трясла ручку одной рукой, а другую засунула между бёдер, ноги дрожали от усилия, которое потребовалось, чтобы удержать пульсирующий мочевой пузырь. Маленькие струйки уже начали капать на её нежно-розовое бельё, и она тихонько заскулила, надеясь, что сестра не услышит.
+«Давай, Мэдди! Впусти меня!» — умоляла Кирстен из-за двери туалета. Она трясла ручку одной рукой, а другую засунула между бёдер, ноги дрожали от усилия, которое потребовалось, чтобы удержать пульсирующий мочевой пузырь. Маленькие струйки уже начали капать на её нежно-розовое бельё, и она тихонько заскулила, надеясь, что сестра не услышит.
 
 — Я ненадолго, — позвала Мэдди.
 
-Это всегда случалось. Мэдди, миниатюрная блондинка из группы поддержки, была самой популярной девочкой в их школе, и каждые выходные она часами готовилась к вечеринкам. В доме была только одна в*нная комната, так что Кирстен всегда не хватало места. Кирстен снова постучала, прежде чем её заставили согнуться пополам и засунуть обе руки под юбку. Какое-то время она боролась, пытаясь ухватиться как можно лучше, чтобы не испачкать пол. Кирстен застонала слишком громко и услышала, как Мэдди хихикнула.
+Это всегда случалось. Мэдди, миниатюрная блондинка из группы поддержки, была самой популярной девочкой в их школе, и каждые выходные она часами готовилась к вечеринкам. В доме был только один туалет, так что Кирстен всегда не хватало места. Кирстен снова постучала, прежде чем её заставили согнуться пополам и засунуть обе руки под юбку. Какое-то время она боролась, пытаясь ухватиться как можно лучше, чтобы не испачкать пол. Кирстен застонала слишком громко и услышала, как Мэдди хихикнула.
 
 — Как тебе это нравится, детка? — дразнила Мэдди, открывая кран на полную мощность и нанося макияж.
 
@@ -28,7 +28,7 @@
 
 «Привет, ребята, — обратилась она к своим пятидесяти тысячам подписчиков в Instagram, — мои сводные сёстры такая маленькая девочка, что даже пару часов не может сдержать свою мочу».
 
-Мэдди стояла между Кирестен и входом в в*нную. Кирстен всё ещё стояла на коленях, не в силах дать отпор, потому что не могла убрать руки с их места между бёдрами. Мэдди рассмеялась и мягко поставила пятку на живот Кирстен. Паника наполнила глаза Кирстен. Мэдди медленно увеличивала давление, пока Кирстен не начала увядать под ней.
+Мэдди стояла между Кирестен и входом в туалет. Кирстен всё ещё стояла на коленях, не в силах дать отпор, потому что не могла убрать руки с их места между бёдрами. Мэдди рассмеялась и мягко поставила пятку на живот Кирстен. Паника наполнила глаза Кирстен. Мэдди медленно увеличивала давление, пока Кирстен не начала увядать под ней.
 
 «О Боже, — всхлипнула Кирстен, — это выходит наружу».
 
@@ -36,7 +36,7 @@
 
 «Ну что ж, — она поднесла камеру к своему лицу и улыбнулась жемчужно-белыми зубами, — пора идти».
 
-Кирстен бросилась в в*нную, как только сводная сестра ушла с её пути. Она села на унитаз, и не успела она даже стянуть джинсы или нижнее бельё, как через них уже хлынула горячая струя мочи, полностью пропитав ткань. Кирстен закричала от удовольствия. Это было так приятно, что ей пришлось прислониться спиной к унитазу, и к тому времени, как она закончила, её ноги дёргались.
+Кирстен бросилась в туалет, как только сводная сестра ушла с её пути. Она села на унитаз, и не успела она даже стянуть джинсы или нижнее бельё, как через них уже хлынула горячая струя мочи, полностью пропитав ткань. Кирстен закричала от удовольствия. Это было так приятно, что ей пришлось прислониться спиной к унитазу, и к тому времени, как она закончила, её ноги дёргались.
 
 Когда Кирстен, наконец, пришла в себя, она вытащила свой телефон и увидела видео, которое опубликовала Мэдди. Лицо Кирстен вспыхнуло от гнева. К концу ночи Мэдди пожалеет об этом видео, если Кирстен имеет к этому какое-то отношение.
 
@@ -64,7 +64,7 @@
 
 — О, слава богу, — вздохнула Мэдди, когда Кирстен подъехала к ближайшей остановке для отдыха. Близость облегчения усилила потребность Мэдди уйти, и она не могла удержаться от того, чтобы немного сесть на своё место. Её ноги тряслись к тому времени, когда они подъехали к парковочному месту, и рука Мэдди потянулась к ручке, пытаясь открыть дверь. От звука того, как Кирстен запирает дверь, Мэдди побежали мурашки по спине. Она могла видеть туалет из окна, и её тело кричало.
 
-«Я сказала, что остановлюсь, а не дала тебе попис*ть», — усмехнулась она. Кирстен наклонилась и положила руку на живот Мэдди. Обычно ровная кожа растянулась, и малейшее прикосновение руки Кирстен заставило ноги Мэдди сжаться вместе.
+«Я сказала, что остановлюсь, а не дала тебе пописить», — усмехнулась она. Кирстен наклонилась и положила руку на живот Мэдди. Обычно ровная кожа растянулась, и малейшее прикосновение руки Кирстен заставило ноги Мэдди сжаться вместе.
 
 «Я собираюсь принести нам немного выпивки, и если я увижу, что ты хотя бы шагаешь внутрь этой заправки, я скажу твоей маме, что я обнаружил, что ты занимаешься сексом с твоим парнем, когда я приехал, чтобы забрать тебя», — проинструктировала она, грубо похлопав по округлившемуся мочевому пузырю Мэдди. Мэдди сглотнула, но сохранила самообладание, отказываясь показывать какие-либо признаки сильного отчаяния перед Кирстен.
 
@@ -78,13 +78,13 @@
 
 «Не могу! Я уже лопну!» Мэдди заплакала.
 
-«Ну, я не заведу эту машину, пока ты не выпьешь её целиком. Кроме того, это не должно быть так сложно. Ведь ты большая девочка. Твой мочевой пузырь намного сильнее моего. На самом деле, мне пришлось попис*ть, пока я был внутри, и это было ооочень приятно».
+«Ну, я не заведу эту машину, пока ты не выпьешь её целиком. Кроме того, это не должно быть так сложно. Ведь ты большая девочка. Твой мочевой пузырь намного сильнее моего. На самом деле, мне пришлось пописить, пока я был внутри, и это было ооочень приятно».
 
 Мэдди фыркнула и взяла напиток, выпив его менее чем за три минуты. Кирстен проверила чашку, затем кивнула и завела машину. Когда они были в десяти минутах ходьбы от дома, Мэдди почувствовала, как напиток начал ударять по её мочевому пузырю. Она отодвинула свои плавки от бикини и вдавила пятки в свою голую задницу так сильно, как только могла, чтобы Кирстен не заметила. Она снова начала качаться. Когда они прибыли в свой дом, Мэдди бросилась внутрь, прежде чем Кирстен смогла её остановить.
 
 «Прошу прощения? Куда ты направляешься?» — спросила мама Мэдди из-за кухонного стола.
 
-Мэдди побежала в в*нную. Ну, на самом деле, она ковыляла так быстро, как только могла, зажав кулаки между ног.
+Мэдди побежала в туалет. Ну, на самом деле, она ковыляла так быстро, как только могла, зажав кулаки между ног.
 
 — Ванная, — поспешно выдохнула Мэдди. Она схватилась за ручку двери, но обнаружила, что она не поддаётся.
 
@@ -95,4 +95,5 @@
 Мама Мэдди подняла бровь.
 
 — Ну, вообще-то, это часть твоего наказания. Алкоголь — это естественное мочегонное средство, а ты не должен был ничего пить сегодня вечером, так что я буду вести себя так, как будто ты этого не делал. До тех пор, пока я так не скажу, юная леди, вам не будут платить за туалет.
+
 
