--- a/nyonoyo/113600-holomess-haachama-cooking/f-x/rus.textile
+++ b/nyonoyo/113600-holomess-haachama-cooking/f-x/rus.textile
@@ -1,4 +1,4 @@
-HoloMess (Haachama Cooking)
+Холомесс (Haachama Cooking)
 
 Автор: nyonoyo
 
@@ -18,11 +18,11 @@ HoloMess (Haachama Cooking)
 
 «Хм? Что случилось, Аки?»
 
-«Ничего страшного, просто запор последние несколько дней. Наверное, сегодня придётся съесть остатки еды. Кстати, не затруднит ли я воспользоваться вашей в*нной? Сомневаюсь, что что-то случится, но мне стоит попытаться вывести его». Женщина, страдающая запором, глубоко вдыхала и выдыхала, продолжая массировать живот.
+«Ничего страшного, просто запор последние несколько дней. Наверное, сегодня придётся съесть остатки еды. Кстати, не затруднит ли я воспользоваться вашим туалетом? Сомневаюсь, что что-то случится, но мне стоит попытаться вывести его». Женщина, страдающая запором, глубоко вдыхала и выдыхала, продолжая массировать живот.
 
 «Конечно! Устраивайтесь поудобнее и предоставьте готовку мне!» — сказал Хаато с совершенно неуместной уверенностью. Аки поморщилась от страха: мысль о том, чтобы оставить её одну, предала бы её многолетний жизненный опыт, но, учитывая мучительную боль в животе, это была жертва, на которую она была готова пойти. В конце концов, что худшего она может сделать, если будет использовать только ингредиенты из продуктовых пакетов?
 
-«Хорошо, просто дайте мне знать, если понадобится помощь», — сказала Аки, направляясь в в*нную, наблюдая, как молодая блондинка дважды ударила себя в грудь с ухмылкой, отворачиваясь.
+«Хорошо, просто дайте мне знать, если понадобится помощь», — сказала Аки, направляясь в туалет, наблюдая, как молодая блондинка дважды ударила себя в грудь с ухмылкой, отворачиваясь.
 
 «Хнннннн!» Аки изо всех сил напряглась на троне, отбросив всю грацию и изящество, пытаясь раскрыть сфинктер и добиться освобождения. Как бы она ни напрягалась и ни стонала, никакого прогресса не наблюдалось. «Боже, сколько ещё ждать, пока это закончится? Я чувствую такую тяжесть…»
 
@@ -36,7 +36,11 @@ HoloMess (Haachama Cooking)
 
 «Ну, может быть, это было бы весело! Просто ооооочень мерзко! Весело и мерзко!» — Хаачама рассмеялась как сумасшедшая.
 
-«Что?! Ни за что! Я бы искала способы стереть себя из жизни», — заметила она сквозь собственный смешок. Однако этот смешок прервал внезапный спазм в животе и отчаянное желание уничтожить унитаз. «О боже, о нет, в*нная!» Аки начала вставать и бежать в туалет, но тут её повалила на землю задыхающаяся, нетерпеливая Хаачама.
+«Что?! Ни за что! Я бы искала способы стереть себя из жизни», — заметила она сквозь собственный смешок. Однако этот смешок прервал внезапный спазм в животе и отчаянное желание уничтожить унитаз.
+
+«О боже, о нет, туалет!» 
+
+Аки начала вставать и бежать в туалет, но тут её повалила на землю задыхающаяся, нетерпеливая Хаачама.
 
 «Давай, Аки! Будет весело!!!» — крикнула Хаато, на этот раз с дьявольской улыбкой на лице, словно одержимая.
 
