--- a/nyonoyo/96813-holomess-un-gama-tetris/f-x/rus.textile
+++ b/nyonoyo/96813-holomess-un-gama-tetris/f-x/rus.textile
@@ -4,7 +4,7 @@ HoloMess (Ун-Гама Тетрис)
 
 *000*2024-01-10 01:15
 
-Я не умер! Прошло много времени с тех пор, как я последний раз публиковал сообщения, но в основном я навёл порядок в своей жизни, и у меня появилось больше свободного времени и мотивации пис*ть снова. Надеюсь, вам понравится эта история. Обещаю, следующий не займёт так много времени!
+Я не умер! Прошло много времени с тех пор, как я последний раз публиковал сообщения, но в основном я навёл порядок в своей жизни, и у меня появилось больше свободного времени и мотивации писать снова. Надеюсь, вам понравится эта история. Обещаю, следующий не займёт так много времени!
 
 «Привет, Мастер! Вантама!»
 
@@ -12,7 +12,7 @@ HoloMess (Ун-Гама Тетрис)
 
 «Кон~ Бан~ Васой!»
 
-«Прошло много времени с тех пор, как мы делали что-то подобное, поэтому я надеюсь, что вы все в восторге!» Переодевающийся мальчик-собака Инуяма Тамаки приветствовал новых зрителей на трансляции, создавая онлайн-лобби Тетриса. К нему присоединились в приветствии зрителей Сираками Фубуки и Нацуиро Мацури, вернувшиеся ветераны серии Endurance Tetris Тамаки. Правила игры были просты. Стримеры соревновались друг с другом в игре, сдерживая желание попис*ть. После завершения раунда всем участникам, кроме победителя, придётся выполнить задание, которое усилит их отчаяние. Этот цикл будет продолжаться до тех пор, пока игрок не обмочится.
+«Прошло много времени с тех пор, как мы делали что-то подобное, поэтому я надеюсь, что вы все в восторге!» Переодевающийся мальчик-собака Инуяма Тамаки приветствовал новых зрителей на трансляции, создавая онлайн-лобби Тетриса. К нему присоединились в приветствии зрителей Сираками Фубуки и Нацуиро Мацури, вернувшиеся ветераны серии Endurance Tetris Тамаки. Правила игры были просты. Стримеры соревновались друг с другом в игре, сдерживая желание пописить. После завершения раунда всем участникам, кроме победителя, придётся выполнить задание, которое усилит их отчаяние. Этот цикл будет продолжаться до тех пор, пока игрок не обмочится.
 
 — Да, это действительно так, — нервно согласился Фубуки. Несмотря на то, что она уже однажды обмочилась во время игрового шоу Тамаки, она не хотела, чтобы в ней были какие-либо другие несчастные случаи. Однако это был не единственный фактор. Чтобы отпраздновать возвращение своего шоу, Тамаки решил поднять ставку; вместо того, чтобы держать мочевой пузырь, они боролись с желанием какать. Это не воодушевило девушку-лисицу, особенно учитывая «происшествие», случившееся пару лет назад. При этом была причина, по которой она знала, что вход в эпизод возрождения будет безопасным, и она смотрела прямо на эту причину.
 
@@ -44,7 +44,7 @@ HoloMess (Ун-Гама Тетрис)
 
 Несколько раундов прошли бесцеремонно, и каждое трио после поражения подверглось различным наказаниям, таким как приседания, чернослив, кофе и т. Д. Тем не менее, наказания определённо сработали: каждый участник начал бороться, почувствовав, как что-то стучится в его заднюю дверь. И со временем внутри Фубуки росла отдельная потребность, которую было невозможно игнорировать.
 
-«Надо идти», — повторяла Фубуки про себя, скрещивая ноги взад и вперёд, вне поля зрения камеры. Она проигрывала битву с мочевым пузырём, а благодаря слабительным и кофе её кишечник не сильно отставал в гонке. Растущее желание попис*ть также отвлекало её от игры, из-за чего она проигрывала ещё больше раундов. Пока она изо всех сил старалась заполнить пробел на доске для тетриса и удержаться от заполнения шорт, седовласая лиса знала, что нужно что-то сделать. Глубоко вздохнув, она слегка раздвинула ноги и отпустила. Каскад мочи тут же залил её белые трусики и чёрные шорты, скатившись с игрового кресла в лужу у её босых ног. Было неловко мириться с тем, что она нарочно попис*ла, но сфинктер не дал ей много времени на размышления, поскольку что-то начало торчать из её ануса. Сжав попу, девушка-лиса снова сосредоточилась на игре, но обнаружила, что уже проиграла, пока занималась делами.
+«Надо идти», — повторяла Фубуки про себя, скрещивая ноги взад и вперёд, вне поля зрения камеры. Она проигрывала битву с мочевым пузырём, а благодаря слабительным и кофе её кишечник не сильно отставал в гонке. Растущее желание пописить также отвлекало её от игры, из-за чего она проигрывала ещё больше раундов. Пока она изо всех сил старалась заполнить пробел на доске для тетриса и удержаться от заполнения шорт, седовласая лиса знала, что нужно что-то сделать. Глубоко вздохнув, она слегка раздвинула ноги и отпустила. Каскад мочи тут же залил её белые трусики и чёрные шорты, скатившись с игрового кресла в лужу у её босых ног. Было неловко мириться с тем, что она нарочно пописила, но сфинктер не дал ей много времени на размышления, поскольку что-то начало торчать из её ануса. Сжав попу, девушка-лиса снова сосредоточилась на игре, но обнаружила, что уже проиграла, пока занималась делами.
 
 «Х-ха! Я выиграю этот! Мацури хвастался небольшими жалобами.
 
@@ -99,5 +99,6 @@ HoloMess (Ун-Гама Тетрис)
 «О боже мой, это было так мило!» — вмешался Тамаки, испортив момент. «Но поскольку все мы сейчас сидим в одиночестве, я не думаю, что могу назвать эту игру иначе, как ничьей. И так просто не пойдёт, не так ли, ребята?» Тамаки наблюдал, как его чат соглашался с ним, сообщения перемещались по экрану с рекордной скоростью. «Думаю, нам просто придётся сделать это снова на следующей неделе! Девочки, вы спустились? Двое друзей секунду смотрели на свои экраны, прежде чем каждый широко улыбнулся.
 
 «Ага».
+
 
 
