--- a/NotGraeme/68786-camping-trip-pee-desperation/rus.textile
+++ b/NotGraeme/68786-camping-trip-pee-desperation/rus.textile
@@ -186,7 +186,7 @@
 
 Однако Omolover6529 хотел ускорить процесс отчаяния. Его следующим вопросом было: «Есть ли у вас дома мочегонные средства?»
 
-На самом деле у мамы Рэйчел в в*нной был пузырёк мочегонного, который прописал ей врач. Рэйчел достала бутылку и приняла таблетку со стаканом воды. Она знала, что мочегонные действуют довольно быстро, но этот? Этот был совсем на другом уровне.
+На самом деле у мамы Рэйчел был пузырёк мочегонного, который прописал ей врач. Рэйчел достала бутылку и приняла таблетку со стаканом воды. Она знала, что мочегонные действуют довольно быстро, но этот? Этот был совсем на другом уровне.
 
 Рэйчел потребовалось всего около десяти минут, чтобы начать время от времени сжимать бёдра вместе, и Омоловер6529, который просил её выпить ещё одну бутылку, не помогал. Она решила выключить Xbox, подняться наверх к своему столу и поработать над домашним заданием, которое давно откладывала.
 
@@ -238,7 +238,7 @@
 
 Рэйчел прогуливалась в пределах десяти минут ходьбы от своего дома, чтобы в случае экстренной ситуации с мочевым пузырём или несчастного случая она могла быстро вернуться домой. Однако бег с таким полным мочевым пузырём был обречён на провал. Всё, кроме медленной перетасовки, вызывало неконтролируемую утечку. Рэйчел засунула руки в штаны, схватила промежность трусиков и осмотрела повреждения. Пятно размером с теннисный мяч было очень заметно на передней части её штанов. Быстрый взгляд на заднюю часть её брюк показал мокрое пятно такого же размера. Рэйчел покраснела, поняв, что любому проходящему было совершенно очевидно, что она медленно мочится. Слёзы навернулись на её глаза, когда она поняла, что существует большая вероятность того, что она полностью обмочится до того, как вернётся домой.
 
-Нет. Рэйчел смахнула слёзы. Ей было восемнадцать лет. Она не собиралась пис*иь в штаны. Сколько ей было, четыре? Она собиралась вернуться домой, сходить в в*нную и сменить трусики. Она была-
+Нет. Рэйчел смахнула слёзы. Ей было восемнадцать лет. Она не собиралась писить в штаны. Сколько ей было, четыре? Она собиралась вернуться домой, сходить в туалет и сменить трусики. Она была-
 
 «Рэйчел! Привет!»
 
@@ -250,7 +250,7 @@
 
 Рейчел покраснела. «Честно говоря, я в нескольких шагах от того, чтобы обмочиться в штаны». Было чрезвычайно неловко говорить Саймону, что она может обмочиться, но Саймон знал лучше, чем он видел, как она попала в аварию.
 
-«Проклятие. Хочешь воспользоваться в*нной в моём доме? Это всего в нескольких минутах ходьбы».
+«Проклятие. Хочешь воспользоваться туалетом в моём доме? Это всего в нескольких минутах ходьбы».
 
 Рэйчел часами ждала этого слова. Она ковыляла так быстро, как только могла, за Саймоном. Он замедлился, чтобы идти рядом с ней.
 
@@ -295,4 +295,5 @@
 Кроме того, вот изображение из бомбометания, которое я немного изменил, чтобы оно выглядело как Рэйчел:
 
 &&
+
 
