--- a/2/Nick_Donovan/99594-1-twitcher/f/rus.textile
+++ b/2/Nick_Donovan/99594-1-twitcher/f/rus.textile
@@ -1,4 +1,4 @@
-#1 Твитчер
+Твитчер #1
 
 Автор: Ник Донован
 
@@ -11,5 +11,6 @@
 И да: это DOCX, а не PDF. Нет: я слишком ленив/устал, чтобы вносить такие изменения. Просто… потерпи, может быть? Пожалуйста? Для меня?
 
 №1 Twitcher.docx
+
 
 
